examples/gpu-pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-18.04
spec:
  containers:
  - name: os-ubuntu
    image: ubuntu:18.04
    imagePullPolicy: IfNotPresent
    command:
    - "/bin/sleep"
    - "3650d"
    resources:
      limits:
        cpu: "5"
        memory: "8G"
        nvidia.com/gpu: "1"
