examples/httpd-pod.yaml
# Pod A
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: httpd
  name: httpd
  namespace: default
spec:
  containers:
    - image: httpd:latest
      name: httpd
