examples/two-nginx-pod.yaml
# Pod A
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx1
  name: nginx1
  namespace: default
spec:
  containers:
    - image: nginx:latest
      name: nginx1
      ports:
        - containerPort: 80
---
# Pod B
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx2
  name: nginx2
  namespace: default
spec:
  containers:
    - image: nginx:latest
      name: nginx2
      ports:
        - containerPort: 80
