examples/two-nginx-deploy-80-3550.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx1
  name: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - image: nginx:latest
          #imagePullPolicy: IfNotPresent
          name: nginx1
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx2
  name: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
        - image: nginx:latest
          name: nginx2
          ports:
          - containerPort: 3550
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2service
spec:
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      port: 3550
      targetPort: 3550
