examples/two-nginx-pod-80-3550.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx1
  name: nginx1
spec:
  containers:
    - image: nginx:latest
      #imagePullPolicy: IfNotPresent
      name: nginx1
      ports:
      - containerPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1service
spec:
  selector:
    app: nginx1
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx2
  name: nginx2
spec:
  containers:
    - image: nginx:latest
      name: nginx2
      ports:
      - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2service
spec:
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
